<resources>
    <string name="app_name">艾特点餐宝</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="rememberPassword">记住密码</string>
    <string name="autoLogin">自动登录</string>
    <string name="login">登录</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_seat_eat_number">SeatEatNumberActivity</string>
    <string name="title_activity_food">FoodActivity</string>
    <string name="next_step">下一步</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="bottomsheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="title_activity_order_detail">OrderDetailActivity</string>

    <string-array name="spingarr">
        <item>北京</item>
        <item>上海</item>
        <item>广州</item>
        <item>深圳</item>
    </string-array>

    <!--提交订单-->
    <string name="submitOrder">提交订单</string>
    <!--首页-->
    <string name="firstPage">点餐宝</string>
    <string name="footorder_bottom">餐单</string>
    <string name="mian">我的</string>
    <!--餐单-->
    <string name="foodOrder">点餐中心</string>
    <!--我的-->
    <string name="my">个人中心</string>


</resources>
